--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "dev": "gatsby develop",
     "start": "npm run dev",
     "format": "prettier --write \"src/**/*.js\"",
-    "clean": "rm -rf .cache && rm -rf public"
+    "clean": "rm -rf .cache && rm -rf public",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "^1.15.2"
   }
 }
