--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "start": "npm run dev",
     "format": "prettier --write \"src/**/*.js\"",
     "clean": "rm -rf .cache && rm -rf public",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master"
+    "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
